# ContextVector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ContextVector/: __init__.py  context_vector.py  contextvector.py  core.py  interfaces.py  main.py
ContextVector/providers/: huggingface.py  ollama.py  openai.py
examples/: basic_similarity.py  multi_provider_demo.py
tests/: test_core.py
